@@ -55,6 +55,7 @@ bool UI_Init()
 	if (successful) successful = UI_AddUI("BamfuslicatorUI", UI_BamfuslicatorUICreate);
 	if (successful) successful = UI_AddUI("TimeUI", UI_TimeUICreate);
 	if (successful) successful = UI_AddUI("ScoreUI", UI_ScoreUICreate);
+	if (successful) successful = UI_AddUI("LoadoutUI", UI_LoadoutUICreate);
 	return successful;
 }
 
